--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,16 @@
     <string name="failed_login">U bent niet ingelogd</string>
     <string name="failed_register">U bent niet geregistreerd</string>
     <string name="pw_explainer_text">Wachtwoord moet minimaal 6 tekens bevatten</string>
+    <string name="meeting">Bijeenkomst</string>
+    <string name="title_activity_meeting">ScrollingActivity</string>
+    <string name="explainer_traffic_lights">Klik op een van de stoplichten om deze bijeenkomst te beoordelen</string>
+    <string name="large_text">
+        "Material is the metaphor.\n\n"
+
+        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
+        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
+        "technologically advanced and open to imagination and magic.\n"
+        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
+        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
+    </string>
 </resources>
